--- a/position-1/styles/style.css
+++ b/position-1/styles/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: "Inter", sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 body {
