fixed background image url directory

--- a/position-1/styles/style.css
+++ b/position-1/styles/style.css
@@ -62,7 +62,7 @@ body {
 
 .card-bg-img {
   height: 140px;
-  background-image: url(/position-1/assets/Oval.svg);
+  background-image: url(../assets/Oval.svg);
 }
 
 .profile-container {
