--- a/position - Landing Page/styles/style.css
+++ b/position - Landing Page/styles/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  /* background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%); */
+  background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
 }
 
 .overflow-wrapper {
