--- a/position - Landing Page/styles/style.css
+++ b/position - Landing Page/styles/style.css
@@ -19,7 +19,7 @@ body {
   margin: 0 auto;
 }
 
-/* --- Header --- */
+/* Header */
 .top-nav {
   display: flex;
   align-items: center;
@@ -46,7 +46,7 @@ body {
   background-color: #666ca3;
 }
 
-/* --- Hero Section --- */
+/* Hero Section*/
 .hero {
   position: relative;
   padding-bottom: 140px;
@@ -107,7 +107,7 @@ body {
   opacity: 0.6;
 }
 
-/* --- Hero Image & Stat Cards --- */
+/* Hero Image & Stat Cards*/
 .hero-img {
   position: relative;
   width: 50%;
@@ -160,7 +160,7 @@ body {
   left: -20px;
 }
 
-/* --- Courses Grid --- */
+/* Courses Grid */
 .courses-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -216,7 +216,7 @@ body {
   text-decoration: none;
 }
 
-/* --- Footer --- */
+/* Footer */
 .footer {
   background-color: #13183f;
   padding: 32px 0;
